WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268790
detik.com: Menu text is not shown in safari at top left corner of header
https://bugs.webkit.org/show_bug.cgi?id=268790
Summary
detik.com: Menu text is not shown in safari at top left corner of header
alan
Reported
2024-02-05 16:29:27 PST
<
rdar://60358063
>
Attachments
Patch
(3.91 KB, patch)
2024-02-05 16:38 PST
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(4.79 KB, patch)
2024-02-05 20:33 PST
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
[fast-cq]Patch
(4.83 KB, patch)
2024-02-06 07:11 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-02-05 16:38:27 PST
Created
attachment 469732
[details]
Patch
alan
Comment 2
2024-02-05 20:33:54 PST
Created
attachment 469735
[details]
Patch
Antti Koivisto
Comment 3
2024-02-06 07:02:43 PST
Comment on
attachment 469735
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=469735&action=review
> Source/WebCore/rendering/RenderBlock.cpp:2309 > + auto childAvoidsFloats = (is<RenderBox>(*child) && downcast<RenderBox>(*child).avoidsFloats()) || (child->isAnonymousBlock() && child->childrenInline());
This could do dynamicDowncast<RenderBox> first for readability
alan
Comment 4
2024-02-06 07:11:21 PST
Created
attachment 469746
[details]
[fast-cq]Patch
EWS
Comment 5
2024-02-06 07:16:34 PST
Commit message contains (OOPS!) and no reviewer found, blocking PR #None
EWS
Comment 6
2024-02-06 19:12:16 PST
Committed
274191@main
(0e458e89455f): <
https://commits.webkit.org/274191@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469746
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug