detik.com: Menu text is not shown in safari at top left corner of header https://bugs.webkit.org/show_bug.cgi?id=268790 <rdar://60358063>

Reviewed by Antti Koivisto.

Inline content by definition is "float avoider". This is the case when inline content is wrapped inside a block container to ensure block sibling rule.
e.g.
  <div><div>
  <div float></div>
  float avoider content.

where the "float avoider content" is wrapped inside an anon block container.

This helps when computing min/max content width for block content where
float avoiders get accumulated on inline direction axis (as opposed to block axis).

* LayoutTests/fast/block/inline-content-is-float-avoider-simple-expected.html: Added.
* LayoutTests/fast/block/inline-content-is-float-avoider-simple.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::avoidsFloats const):

Canonical link: https://commits.webkit.org/274191@main